; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/openbsm/bin/auditd/extr_auditd_fbsd.c_auditd_get_state.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/openbsm/bin/auditd/extr_auditd_fbsd.c_auditd_get_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@auditing_state = common dso_local global i64 0, align 8
@AUD_STATE_INIT = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @auditd_get_state() #0 {
  %1 = load i64, i64* @auditing_state, align 8
  %2 = load i64, i64* @AUD_STATE_INIT, align 8
  %3 = icmp eq i64 %1, %2
  br i1 %3, label %4, label %6

4:                                                ; preds = %0
  %5 = call i32 (...) @init_audit_state()
  br label %6

6:                                                ; preds = %4, %0
  %7 = load i64, i64* @auditing_state, align 8
  %8 = trunc i64 %7 to i32
  ret i32 %8
}

declare dso_local i32 @init_audit_state(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
